fix : [FE] 견적서 페이지 디자인 수정

--- a/html/estimate/estimateDetail.html
+++ b/html/estimate/estimateDetail.html
@@ -17,6 +17,7 @@
                 <p>Estimate</p>
                 <p class="description">원하는 조건의 스튜디오, 드레스 메이크업 업체를 조합해 가격을 알아봐요</p>
             </div>
+            <!-- 스드메 상단 탭 -->
             <div class="tabs">
                 <div class="tab">스튜디오</div>
                 <div class="tab">드레스</div>
@@ -28,8 +29,8 @@
                         <img src="../../assets/images/estimate-detail1.png" alt="Studio Image">
                         <div class="selected">
                             <div class="content-main">
-                                <p class="content-bold">S 스튜디오</p>
-                                <p class="content-address">서울특별시 서초구 신반포로 4길 7</p>
+                                <p class="bold">S 스튜디오</p>
+                                <p class="address">서울특별시 서초구 신반포로 4길 7</p>
                             </div>
                             <div class="basic-option">
                                 <div class="basic-detail">
@@ -43,94 +44,94 @@
                             </div>
                         </div>        
                     </div>
+                    <!-- 세부 옵션 -->
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">추가 비용 옵션</span>
                             <span>업체에 직접 결제하는 추가 비용이 있을 수 있어요.</span>
                             <span>실제 비용과 다를 수 있으니, 상품 이용 전 업체를 통해 꼭 확인하세요.</span>
                         </div>
                     </div>
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">수정본 데이터</span>
                             <span>촬영 수정본 데이터 구매 시 발생하는 비용</span>    
                         </div>
-                        <div class="item-price">
+                        <div class="option-price">
                             <span>165,000원</span>
                         </div>
                     </div>
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">페이퍼 추가</span>
                             <span>앨범 페이지 추가 시 발생하는 비용</span>
                         </div>
-                        <div class="item-price">
+                        <div class="option-price">
                             <span>33,000원</span>
                         </div>    
                     </div>
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">들러리 촬영 비용</span>
                             <span>들러리 촬영 시 발생하는 비용 (1건 기준)</span>
                         </div>
-                        <div class="item-price">
+                        <div class="option-price">
                             <span>150,000원</span>
                         </div>    
                     </div>
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">야간씬 촬영</span>
                             <span>야간씬 촬영 시 발생하는 비용</span>
                         </div>
-                        <div class="item-price">
+                        <div class="option-price">
                             <span>110,000원</span>
                         </div>    
                     </div>
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">의상 추가</span>
                             <span>촬영 의상 추가 시 발생하는 비용 (1벌당)</span>
                         </div>
-                        <div class="item-price">
+                        <div class="option-price">
                             <span>110,000원</span>
                         </div>    
                     </div>
                     <div class="option">
-                        <div class="item-option">
+                        <div class="option-item">
                             <span class="title">작가 지정</span>
                             <span>촬영 작가 지정 시 발생하는 비용</span>
                         </div>
-                        <div class="item-price">
+                        <div class="option-price">
                             <span>220,000원</span>
                         </div>    
                     </div>
                 </div>
-                <div class="right-panel">
+
+                <!-- 선택하신 목록 -->
+                <div class="selected-list">
                     <h2>선택하신 목록</h2>
                     <div class="list">
-                        <div class="list-main">
-                            <div class="pic-right">
-                                <div class="item-title">
-                                    <span>S 스튜디오</span>
-                                    <span>330,000원</span>
-                                </div>
-                                <div class="items">
-                                    <div class="item">
-                                        <p><img src="../../assets/images/icon-minus.png" alt="">수정 데이터</p>
-                                        <p>165,000원</p>
-                                    </div>
-                                    <div class="item">
-                                        <p><img src="../../assets/images/icon-minus.png" alt="">플라리 촬영</p>
-                                        <p>155,000원</p>
-                                    </div>
-                                    <div class="item">
-                                        <p><img src="../../assets/images/icon-minus.png" alt="">야간 촬영</p>
-                                        <p>110,000원</p>
-                                    </div>
-                                </div>
+                        <div class="item-title">
+                            <span>S 스튜디오</span>
+                            <span>330,000원</span>
+                        </div>
+                        <div class="items">
+                            <div class="item">
+                                <p><img src="../../assets/images/icon-minus.png" alt="">수정 데이터</p>
+                                <p>165,000원</p>
+                            </div>
+                            <div class="item">
+                                <p><img src="../../assets/images/icon-minus.png" alt="">플라리 촬영</p>
+                                <p>155,000원</p>
+                            </div>
+                            <div class="item">
+                                <p><img src="../../assets/images/icon-minus.png" alt="">야간 촬영</p>
+                                <p>110,000원</p>
                             </div>
                         </div>
                     </div>
+                    <!-- 가격 표시-->
                     <div class="price">
                         <div class="price-regular">
                             <span>정상가</span><span>330,000원</span>
@@ -141,7 +142,7 @@
                         <div class="price-total">
                             <span>최종 금액</span><span>330,000원</span>
                         </div>
-                        <div class="replay">
+                        <div class="reselection">
                             <a href=""><span class="material-symbols-outlined">
                                 replay
                                 </span>업체 다시 선택</a>
@@ -155,6 +156,7 @@
                     <p>실제 결제할 금액을 확인할 수 있으며, Wedder에서는 이에 대해 책임을 지지 않습니다.</p>
                 </div>
                 </div>
+                <!-- 이전, 다음 버튼 -->
                 <div class="btn">
                     <button onclick="location.href='estimate-calculator.html'" class="back">이전</button>
                     <button onclick="location.href='estimate-final.html'" class="next">다음으로</button>
