--- a/html/estimate/estimateFinal.html
+++ b/html/estimate/estimateFinal.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../../css/estimate/estimateFinal.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="../../js/main/main.js"></script>
+        <script src="../../js/estimate/estimateFinal.js"></script>
     </head>
     <body>
         <div id="header-placeholder"></div>
@@ -32,39 +33,39 @@
                 </div>
             </div>
             <div class="content">
-                <div class="content-div">
-                    <div class="grid">
+                <div class="content-main">
+                    <div class="content-box">
                         <div class="notice">
                             <div class="notice-title">꼭 확인해주세요!</div>
                             <p>· 이 견적은 기본 가격 정보를 단순 계산한 참고용 견적입니다.</p>
                             <p>· 옵션 변경 등에 따라 금액이 변경될 수 있습니다.</p>
                             <p>· 실제 견적과 상이할 수 있으며, Wedder에서는 이에 대한 귀책 사유가 따르지 않습니다.</p>
                         </div>
-                        <div class="select-content">
+                        <div class="select">
                             <div class="select-list">
                                 <h1>선택하신 목록</h1>
-                                <div class="studio">
-                                    <div class="studio-content">
+                                <div class="company">
+                                    <div class="studio">
                                         <img src="../../assets/images/weddingThumbnail.png" alt="스튜디오">
-                                        <div class="studio-detail">
-                                            <div class="studio-note">
+                                        <div class="company-detail">
+                                            <div class="company-note">
                                                 <p class="name">S 스튜디오</p>
                                                 <p>[웨딩촬영]앨범 20p + 기본 액자 (20R)</p>
                                             </div>
                                             <div>330,000원</div>
                                         </div>
-                                        <div class="studioDetail-options">
+                                        <div>
                                             <div class="options">
-                                                <p class="detail-option">세부옵션</p>
-                                                <div class="option1">   
+                                                <p class="option-detail">세부옵션</p>
+                                                <div class="option">   
                                                     <p>· 수정본데이터</p>
                                                     <p>165,000원</p>
                                                 </div>
-                                                <div class="option2">
+                                                <div class="option">
                                                     <p>· 들러리 촬영</p>
                                                     <p>150,000원</p>
                                                 </div>
-                                                <div class="option3">
+                                                <div class="option-bot">
                                                     <p>· 야간씬 촬영</p>
                                                     <p>110,000원</p>
                                                 </div>
@@ -72,49 +73,49 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="dress">
-                                        <div class="studio-content">
-                                            <img src="../../assets/images/dressThumbnail.png" alt="스튜디오">
-                                            <div class="studio-detail">
-                                                <div class="studio-note">
-                                                    <p class="name">안나스포사</p>
-                                                    <p>[촬영] 드레스 3벌</p>
-                                                </div>
-                                                <p>1,120,000원</p>
+                                <div class="company">
+                                    <div class="dress">
+                                        <img src="../../assets/images/dressThumbnail.png" alt="스튜디오">
+                                        <div class="company-detail">
+                                            <div class="company-note">
+                                                <p class="name">안나스포사</p>
+                                                <p>[촬영] 드레스 3벌</p>
                                             </div>
-                                            <div class="studioDetail-options">
-                                                <div class="options">
-                                                    <p class="detail-option">세부옵션</p>
-                                                    <div class="option1">   
-                                                        <p>· 피팅비</p>
-                                                        <p>55,000원</p>
-                                                    </div>
-                                                    <div class="option2">
-                                                        <p>· 헬퍼비</p>
-                                                        <p>250,000원</p>
-                                                    </div>
-                                                    <div class="option3">
-                                                        <p>· 드레스 추가</p>
-                                                        <p>330,000원</p>
-                                                    </div>
+                                            <p>1,120,000원</p>
+                                        </div>
+                                        <div>
+                                            <div class="options">
+                                                <p class="option-detail">세부옵션</p>
+                                                <div class="option">   
+                                                    <p>· 피팅비</p>
+                                                    <p>55,000원</p>
                                                 </div>
-                                            </div>
-                                        </div>                
-                                </div>
-                                <div class="makeup">
-                                        <div class="studio-content">
-                                            <img src="../../assets/images/makeupThumbnail.png" alt="스튜디오">
-                                            <div class="studio-detail">
-                                                <div class="studio-note">
-                                                    <p class="name">제니하우스 청담힐</p>
-                                                    <p>[촬영+본식] 신부신랑 메이크업</p>
+                                                <div class="option">
+                                                    <p>· 헬퍼비</p>
+                                                    <p>250,000원</p>
                                                 </div>
-                                                <p>1,120,000원</p>
+                                                <div class="option-bot">
+                                                    <p>· 드레스 추가</p>
+                                                    <p>330,000원</p>
+                                                </div>
                                             </div>
                                         </div>
+                                    </div>                
+                                </div>
+                                <div class="company">
+                                    <div class="makeup">
+                                        <img src="../../assets/images/makeupThumbnail.png" alt="스튜디오">
+                                        <div class="company-detail">
+                                            <div class="company-note">
+                                                <p class="name">제니하우스 청담힐</p>
+                                                <p>[촬영+본식] 신부신랑 메이크업</p>
+                                            </div>
+                                            <p>1,120,000원</p>
+                                        </div>
+                                    </div>
                                     <div class="options">
-                                        <p class="detail-option">세부옵션</p>
-                                        <div class="option1">   
+                                        <p class="option-detail">세부옵션</p>
+                                        <div class="option-bot">   
                                             <p>· 직급 지정 (원장)</p>
                                             <p>55,000원</p>
                                         </div>
@@ -139,12 +140,35 @@
                                 
                             </div>
                             <div class="btn">
-                                <button onclick="location.href='estimate-detail.html'" class="back">뒤로가기</button>
+                                <button onclick="location.href='estimateDetail.html'" class="back">뒤로가기</button>
                                 <button class="add">견적함에 담기</button>
                             </div>
                         </div>
                     </div>
                 </div>
+                </section>
+                <!-- 담기 확인 모달창 -->
+                <section id="modal" class="modal">
+                    <div class="modal-content">
+                        <h2 class="modal-q">견적함에 담으시겠습니까?</h2>
+                        <div class="modal-btn">
+                            <a href="#"><button class="check-btn">확인</button></a> 
+                            <a href="#"><button class="cancel-btn">취소</button></a>
+                        </div>
+                    </div>
+                </section>
+            
+                <!-- 담기 완료 모달창 -->
+                <section id="modal2" class="modal2">
+                    <div class="modal-content">
+                        <h2 class="modal-complete">My견적함에 담기 완료!</h2>
+                        <p>견적함으로 이동하시겠습니까?</p>
+                        <div class="modal-btn">
+                            <a href="../../html/mypage/estimateStorage.html"><button class="check-btn">확인</button></a> 
+                            <a href="#"><button class="cancel-btn">취소</button></a>
+                        </div>
+                    </div>
+                </section>    
             </div>
         </div>    
         <div id="footer-placeholder"></div>
