--- a/html/package/packageMain.html
+++ b/html/package/packageMain.html
@@ -20,19 +20,19 @@
                     <!-- 슬라이드 -->
                     <div class="swiper-slide">
                         <div class="banner-slide">
-                            <div class="paragraph">
-                                <div class="title-bold">
+                            <div class="banner-content">
+                                <div class="banner-bold">
                                     웨딩 카페보다<br>웨딩 박람회보다 더 싸게<br>결혼준비를 할 수 있어요.
                                 </div>
-                                <div class="title-one">
+                                <div class="banner-text1">
                                     <p>'스드메 상품'은 어디서 계약하시더라도 동일한 구성입니다.</p>
                                     <p>단지 '플래너 수수료'를 얼마나 책정하느냐에 따라 소비자 가격이 달라질 뿐이죠.</p>
                                 </div>
-                                <div class="title-two">
+                                <div class="banner-text1">
                                     <p>wedder는 기존 '웨딩플래너 역할'은 그대로 제공해드리면서</p>
                                     <p><span class="color">투명한 정찰제</span>로 업계 <span class="color">최저가격</span>을 선보입니다.</span>
                                 </div>
-                                <div class="title-three">
+                                <div class="banner-text1">
                                     <p>이제 결혼준비 시장도 투명하게 바뀔 때가 되지 않았나요? Wedder가 앞장섭니다!</p>
                                 </div>
                             </div>
@@ -42,9 +42,34 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">Slide2</div>
-                    <div class="swiper-slide">Slide3</div>
-                    <div class="swiper-slide">Slide4</div>
+                    <div class="swiper-slide">
+                        <div class="banner-slide">
+                            <div class="banner-content2">
+                                <div class="banner-text2">
+                                    <p>누적 판매수 <span class="color">110만회</span></p>
+                                    <p>누적 회원수<span class="color"> 67만명</span></p>
+                                    <p>예랑, 예신들의 이유 있는 선택</p>
+                                    <p>요즘 웨딩의 모든 것, <span class="color">Wedder</span></p>
+                                    <p>지금 가입하고 혜택 받으세요!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="banner-slide">
+                            <div class="banner-content2">
+                                <div class="banner-text3">
+                                    <p>내 마음대로 견적서 생성</p>
+                                    <p>직접 '스/드'메'를 조합하여 최저가 견적을 낼 수 있어요.</p>
+                                    <p>1.'스/드/메'카테고리별로 원하는 상품을 선택하세요.</p>
+                                    <p>2. '드/메'만 필요하시다면? '드/메' 상품만 선택하세요.</p>
+                                    <p>3. '견적확인' 버튼을 누르면 금액을 확인할 수 있어요.</p>
+                                    <p>4. 자세히보기를 클릭하시면 상세한 상품분석을 확인하실 수 있어요!</p>
+                                    <p>5. 계약 이후에는 Wedder에서 웨딩 플래너 역할을 대신해 모든 일을 처리해드려요.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             <!-- 슬라이드 페이지 -->
                 <div class="swiper-pagination"></div>
@@ -63,7 +88,7 @@
                             <span class="circle">1</span>
                             <h2>합리적인 가격</h2>
                         </div>
-                        <p>웨딩플래너 없이도 만족하실 수 있는 상품들을<br>투명한 정찰제 시행을 통해 업계 최저 가격으로 구성했어요.</p>
+                        <p>웨딩플래너 없이도 만족하실 수 있는<br>상품들을 투명한 정찰제 시행을 통해<br>업계 최저 가격으로 구성했어요.</p>
                     </div>
                 </div>
                 <div class="recommendation">
@@ -83,7 +108,7 @@
                             <span class="circle">3</span>
                             <h2>편의성</h2>
                         </div>
-                        <p>모든 웨딩 준비, 한 곳에서 해결하세요!<br>쉽고 빠르게 결혼식을 준비할 수 있도록 패키지를 구성했어요.</p>
+                        <p>모든 웨딩 준비, 한 곳에서 해결하세요!<br>쉽고 빠르게 결혼식을 준비할 수 있도록<br>패키지를 구성했어요.</p>
                     </div>
                 </div>
                 <div class="recommendation">
@@ -93,13 +118,13 @@
                             <span class="circle">4</span>
                             <h2>프리미엄 패키지</h2>
                         </div>
-                        <p>성수기 황금시간대 독점 패키지를 통해<br>가장 특별한 순간을 놓치지 마세요.<br>프리미엄 패키지로 좋은 날씨, 좋은 시간대를 예약할 수 있어요</p>
+                        <p>프리미엄 패키지를 통해<br>가장 특별한 순간을 놓치지 마세요.<br>한번에 좋은 날씨, 좋은 시간대를<br>예약할 수 있어요.</p>
                     </div>
                 </div>
             </div>
 
             <!-- 이용방법 -->
-            <div class="step-title">
+            <div class="step-title">        
                 <div class="step-name">패키지 이용방법</div>
             </div>
             <div class="step-title">
