fix : [FE] 로그인 페이지 삭제정리

--- a/html/login/uselaw.html
+++ b/html/login/uselaw.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../css/login/law.css" />
+    <script defer src="../../js/login/law.js"></script>
 </head>
 <body>
 
@@ -227,6 +228,5 @@
 </div>
 
 
-<script src="../../js/login/law.js"></script>
 </body>
 </html>
