--- a/html/mypage/myPayment.html
+++ b/html/mypage/myPayment.html
@@ -30,7 +30,26 @@
           <div id="myPage-sidebar-placeholder"></div>
         </aside>
       </section>
-      <div class="hd__inner960">
+      <div class="hd__inner880">
+        <section class="summary">
+          <h1>안녕하세요. 마리아쥬스퀘어 손님</h1>
+          <div class="summary-lists">
+            <div class="summary-item">
+              <div class="summary-title">신규 방문 예약</div>
+              <div class="summary-count">
+                <span class="number">2</span>
+                <span class="unit">건</span>
+              </div>
+            </div>
+            <div class="summary-item">
+              <div class="summary-title">오늘 방문 일정</div>
+              <div class="summary-count">
+                <span class="number">3</span>
+                <span class="unit">건</span>
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- 2.헤더 설명 -->
         <section class="myPayment-header" id="myPayment-section2">
           <h3>결제 내역</h3>
